# Awake

./: BUILD.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  run-tests.bat  run-tests.sh  vitest.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-allow-icon.icns  icon-block-icon.icns
src-tauri/src/: commands.rs  error.rs  icon.rs  lib.rs  main.rs  main_new.rs  main_old.rs  persistence.rs  platform.rs  wake_service.rs
src-tauri/src/core/: mod.rs  screen_mode.rs  tooltip.rs
src-tauri/tests/: integration_tests.rs  unit_tests.rs
tests/: autostart.test.ts  e2e.test.ts  frontend.test.ts  setup.ts
